@@ -10,6 +10,8 @@ Release date: 2014-02-09
 Core and Builtins
 -----------------
 
+- Issue #17162: Add PyType_GetSlot.
+
 - Issue #20162: Fix an alignment issue in the siphash24() hash function which
   caused a crash on PowerPC 64-bit (ppc64).
 
